# tap-smoke-test

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  demo-data  meltano.yml  pyproject.toml  sample-script.jsonl  tap-smoke-test.sh  tox.ini
.github/: dependabot.yml
.github/workflow/: testci.yml
.github/workflows/: testci.yml
demo-data/: exception-config.json  looping-stream-config.json  nested-attributes.jsonl  remote-streams-config.json  simple-config.json
smokescript/: script.py
tap_smoke_test/: __init__.py  client.py  reader.py  streams.py  tap.py
tap_smoke_test/demo_data/: __init__.py  multiple-streams-config.json  nested-attributes.jsonl  pageviews-data.jsonl
tap_smoke_test/tests/: test_core.py
tests/: __init__.py  test_core.py
