[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "tap-smoke-test"
version = "0.0.1"
description = "`tap-smoke-test` is a Singer tap for SmokeTest, built with the Meltano SDK for Singer Taps."
authors = [
  "Meltano team and contributors <hello@meltano.com>",
]
maintainers = [
  "Meltano team and contributors <hello@meltano.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8.1"
requests = "~=2.31"
singer-sdk = "~=0.41.0"
genson = "~=1.2"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.0"
singer-sdk = { version = "~=0.41.0", extras = [
  "testing",
] }

[tool.poetry.scripts]
# CLI declaration
tap-smoke-test = 'tap_smoke_test.tap:TapSmokeTest.cli'

[tool.ruff]
target-version = "py38"

line-length = 120
lint.select = [
  "ANN",
  "D",
  "I",
  "UP",
]
lint.ignore = [
  "ANN101",
]
lint.per-file-ignores."tests/*" = [
  "ANN",
  "D1",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-annotations.mypy-init-return = true
lint.flake8-annotations.suppress-dummy-args = true
lint.flake8-import-conventions.banned-from = [
  "typing",
]
lint.flake8-import-conventions.extend-aliases.typing = "t"
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"
