[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "tap-smoke-test"
version = "0.0.1"
description = "Singer tap for SmokeTest, built with the Meltano SDK for Singer Taps"
license = "Apache-2.0"
maintainers = [ { name = "Meltano team and contributors", email = "hello@meltano.com" } ]
authors = [ { name = "Meltano team and contributors", email = "hello@meltano.com" } ]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "genson~=1.2",
  "requests~=2.31",
  "singer-sdk~=0.48.0",
  "typing-extensions>=4.13.2; python_full_version<'3.12'",
]

scripts.tap-smoke-test = "tap_smoke_test.tap:TapSmokeTest.cli"

[dependency-groups]
dev = [
  "pytest~=8.0",
  "singer-sdk[testing]",
  "types-requests>=2.32.4.20250809",
]

[tool.ruff]
line-length = 120
lint.select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C9",
  "D",
  "DTZ",
  "FA",
  "FBT",
  "FURB",
  "G",
  "I",
  "ICN",
  "LOG",
  "N",
  "PERF",
  "PTH",
  "RUF",
  "SIM",
  "T10",
  "TC",
  "TID",
  "UP",
]
lint.per-file-ignores."tests/*" = [
  "ANN",
  "D1",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-annotations.mypy-init-return = true
lint.flake8-annotations.suppress-dummy-args = true
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "genson.*",
]

[tool.uv.sources]
singer-sdk = { git = "https://github.com/meltano/sdk.git", rev = "main" }
